cluster/infrastructure/cni/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      # kubernetes.io/tls-acme: "true"
      kubernetes.io/ingress.class: nginx
      # kubernetes.io/tls-acme: "true"
      cert-manager.io/issue-temporary-certificate: "true"
      # cert-manager.io/private-key-rotation-policy: always
  name: hubble
  namespace: kube-system
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - hubble.REPLACE_WITH_YOUR_DOMAIN
    secretName: default-tls
  rules:
  - host: hubble.REPLACE_WITH_YOUR_DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hubble-ui
            port:
              number: 80
